--- a/YSBlog/back/package.json
+++ b/YSBlog/back/package.json
@@ -2,13 +2,17 @@
   "name": "node",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.3.2",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16"
   }
 }
