--- a/YSBlog/back/.env
+++ b/YSBlog/back/.env
@@ -1,2 +1,2 @@
-Mongo_url = mongodb+srv://usgnay:FirstTry@cluster0.z5tu0.mongodb.net/blog?retryWrites=true&w=majority
+Mongo_url = mongodb+srv://<userid>:<password>@cluster0.z5tu0.mongodb.net/blog?retryWrites=true&w=majority
             
